--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "nest build",
+    "build": "nest build && ./node_modules/",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -28,9 +28,11 @@
     "@nestjs/platform-express": "^7.5.1",
     "dotenv": "^8.2.0",
     "mongoose": "^5.11.15",
+    "netlify-lambda": "^2.0.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3"
+    "rxjs": "^6.6.3",
+    "serverless-http": "^2.7.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
